--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -11,6 +11,12 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
+    {% for message in app.flashes('success') %}
+        <div class="alert alert-success">
+            {{ message }}
+        </div>
+    {% endfor %}
+
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code>/var/www/html/src/Controller/DefaultController.php</code></li>
