--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -7,7 +7,7 @@
 
     <form action="{{ path('app_login') }}" method="post">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-        <label for="username">Email:</label>
+        <label for="username">Email!:</label>
         <input type="text" id="username" name="_username" value="{{ last_username }}" required>
 
         <label for="password">Password:</label>
