--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -12,19 +12,18 @@
             <div class="mb-3">
                 You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
-        {% endif %}
+        {% else %}
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <label for="username">Username</label>
+            <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
+            <label for="password">Password</label>
+            <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
 
-        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-        <label for="username">Username</label>
-        <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
-        <label for="password">Password</label>
-        <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
+            <input type="hidden" name="_csrf_token"
+                   value="{{ csrf_token('authenticate') }}"
+            >
 
-        <input type="hidden" name="_csrf_token"
-               value="{{ csrf_token('authenticate') }}"
-        >
-
-        {#
+            {#
             Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
             See https://symfony.com/doc/current/security/remember_me.html
 
@@ -32,11 +31,15 @@
                 <input type="checkbox" name="_remember_me" id="_remember_me">
                 <label for="_remember_me">Remember me</label>
             </div>
-        #}
+            #}
 
-        <button class="btn btn-lg btn-primary m-2" type="submit">
-            Sign in
-        </button>
+            <button class="btn btn-lg btn-primary m-2" type="submit">
+                Sign in
+            </button>
+            <a href="{{ path('app_register') }}">Зарегистрироваться</a>
+        {% endif %}
+
+
     </form>
-    <a href="{{ path('app_register') }}">Зарегистрироваться</a>
+
 {% endblock %}
