--- a/templates/contacts/index.html.twig
+++ b/templates/contacts/index.html.twig
@@ -3,34 +3,48 @@
 {% block title %}Hello ContactsController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+    <style>
+        .example-wrapper {
+            margin: 1em auto;
+            max-width: 800px;
+            width: 95%;
+            font: 18px/1.5 sans-serif;
+        }
 
-<div class="example-wrapper">
+        .example-wrapper code {
+            background: #F5F5F5;
+            padding: 2px 6px;
+        }
+    </style>
 
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success">
-            {{ message }}
+    <div class="contacts-wrapper">
+
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+
+        <h1>Contacts</h1>
+
+        {{ form_errors(contactsForm) }}
+
+        {{ form_start(contactsForm) }}
+        <div class="form-item">
+            {{ form_row(contactsForm.title) }}
         </div>
-    {% endfor %}
+        <div class="form-item">
+            {{ form_row(contactsForm.body, {
+                label: 'Message'
+            }) }}
+        </div>
+        <div class="form-item">
+            {{ form_row(contactsForm.email) }}
+        </div>
+        <div class="form-item">
+            <button type="submit" class="btn">Send</button>
+            {{ form_end(contactsForm) }}
+        </div>
 
-    <h1>Please fill the form! ✅</h1>
-
-
-
-    {{ form_errors(contactsForm) }}
-
-    {{ form_start(contactsForm) }}
-    {{ form_row(contactsForm.title) }}
-    {{ form_row(contactsForm.body, {
-        label: 'Message'
-    }) }}
-    {{ form_row(contactsForm.email) }}
-
-    <button type="submit" class="btn">Send </button>
-    {{ form_end(contactsForm) }}
-
-</div>
+    </div>
 {% endblock %}
