--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -4,7 +4,7 @@
     {% if error %}
         <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
+<div class="login-wrapper">
     <form action="{{ path('app_login') }}" method="post">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <label for="username">Email!:</label>
@@ -18,5 +18,6 @@
 
         <button type="submit">login</button>
     </form>
+</div>
 
 {% endblock %}
