--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,17 +3,26 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
 
-    {{ form_errors(registrationForm) }}
+    <div class="register-wrapper">
+        <h1>Register</h1>
+        {{ form_errors(registrationForm) }}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        {{ form_start(registrationForm) }}
+        <div class="form-item">
+            {{ form_row(registrationForm.email) }}
+        </div>
+        <div class="form-item">
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Password'
+            }) }}
+        </div>
+        <div class="form-item checkbox">
+            {{ form_row(registrationForm.agreeTerms) }}
+        </div>
+        <div class="form-item">
+            <button type="submit" class="btn">Register</button>
+        </div>
+        {{ form_end(registrationForm) }}
+    </div>
 {% endblock %}
