--- a/templates/contacts/index.html.twig
+++ b/templates/contacts/index.html.twig
@@ -17,7 +17,7 @@
         }
     </style>
 
-    <div class="contacts-wrapper">
+    <div class="form-wrapper">
 
         {% for message in app.flashes('success') %}
             <div class="alert alert-success">
