--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div class="register-wrapper">
+    <div class="form-wrapper">
         <h1>Register</h1>
         {{ form_errors(registrationForm) }}
 
