Fix output of gender in filter form

--- a/templates/catalog/index.html.twig
+++ b/templates/catalog/index.html.twig
@@ -15,6 +15,9 @@
         <div class="form-item category">
             {{ form_row(formSearch.category) }}
         </div>
+        <div class="form-item genre">
+            {{ form_row(formSearch.genre) }}
+        </div>
 {#        {{ form_widget(formSearch) }}#}
         <div class="form-item">
             <button class="btn btn-primary">{{ button_label|default('Search') }}</button>
